<resources>
    <string name="app_name">Super Duper Password Utility Tool 9001</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>

    <!-- Home Strings -->
    <string name="homePasswordPrompt">Enter Password</string>
    <string name="homeSubmitButtonText">Analyse</string>
    <string name="homeResultsHeader">Results</string>
    <string name="homeResultsField"></string>
    <string name="homeExpandButton">See More</string>

    <!-- Login Strings -->
    <string name="loginUsernameField">Enter Username</string>
    <string name="loginPasswordField">Enter Password</string>
    <string name="loginButton">Login</string>
    <string name="logoutButton">Logout</string>


    <!-- Settings Strings -->
    <string name="themeDescriptor">Theme: </string>
    <string name="themeBtnDefault">System</string>
    <string name="themeBtnDark">Dark</string>
    <string name="themeBtnLight">Light</string>
    <string name="refresh_values">Refresh Values</string>
    <string name="toggle_values">Toggle Values</string>
    <string name="faqBtn">FAQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_graph">View Graph</string>

</resources>